--- a/react-todolist/package.json
+++ b/react-todolist/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.1",
+    "material-ui": "^0.20.1",
     "react": "^16.4.1",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "reactjs-popup": "^1.1.1",
+    "styled-components": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
